# SFML-Physics-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: circle.h  externalForces.h  game.h  inputHandler.h  physicsEngine.h  physicsObject.h  rectangle.h
src/: circle.cpp  externalForces.cpp  game.cpp  inputHandler.cpp  main.cpp  physicsEngine.cpp  physicsObject.cpp  rectangle.cpp
